--- a/Documented Q-Learning.ipynb
+++ b/Documented Q-Learning.ipynb
@@ -8,55 +8,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:4: SyntaxWarning: invalid escape sequence '\\['\n",
-      "<>:4: SyntaxWarning: invalid escape sequence '\\['\n",
-      "C:\\Users\\yahya\\AppData\\Local\\Temp\\ipykernel_8924\\1333411057.py:4: SyntaxWarning: invalid escape sequence '\\['\n",
-      "  \"\"\"\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'\\n### What is Q-Learning?\\n\\nQ-Learning is a model-free reinforcement learning algorithm used to find the optimal action-selection policy for a given finite Markov Decision Process (MDP). It is based on the concept of learning the Q-value, which represents the expected utility of taking a certain action in a given state, and following the optimal policy thereafter.\\n\\nThe Q-value is updated iteratively using the following update rule:\\n\\n\\\\[\\nQ(s_t, a_t) \\\\leftarrow Q(s_t, a_t) + \\x07lpha \\\\left( R_t + \\\\gamma \\\\max_{a} Q(s_{t+1}, a) - Q(s_t, a_t) \\right)\\n\\\\]\\n\\nWhere:\\n- \\\\( Q(s_t, a_t) \\\\): Current Q-value for state \\\\( s_t \\\\) and action \\\\( a_t \\\\).\\n- \\\\( \\x07lpha \\\\): Learning rate, which determines how much new information overrides the old information.\\n- \\\\( R_t \\\\): Reward received after taking action \\\\( a_t \\\\) in state \\\\( s_t \\\\).\\n- \\\\( \\\\gamma \\\\): Discount factor, which determines the importance of future rewards.\\n- \\\\( \\\\max_{a} Q(s_{t+1}, a) \\\\): Maximum Q-value for the next state \\\\( s_{t+1} \\\\) over all possible actions.\\n\\nThe goal of Q-Learning is to iteratively update the Q-values until they converge to the optimal Q-values, which can then be used to derive the optimal policy.\\n'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "# Introduction to Q-Learning\n",
     "\n",
     "# Markdown cell explaining the Q-Learning algorithm\n",
-    "\"\"\"\n",
+    "\n",
     "### What is Q-Learning?\n",
     "\n",
     "Q-Learning is a model-free reinforcement learning algorithm used to find the optimal action-selection policy for a given finite Markov Decision Process (MDP). It is based on the concept of learning the Q-value, which represents the expected utility of taking a certain action in a given state, and following the optimal policy thereafter.\n",
     "\n",
     "The Q-value is updated iteratively using the following update rule:\n",
     "\n",
-    "\\[\n",
+    "$$\n",
     "Q(s_t, a_t) \\leftarrow Q(s_t, a_t) + \\alpha \\left( R_t + \\gamma \\max_{a} Q(s_{t+1}, a) - Q(s_t, a_t) \\right)\n",
-    "\\]\n",
+    "$$\n",
     "\n",
     "Where:\n",
-    "- \\( Q(s_t, a_t) \\): Current Q-value for state \\( s_t \\) and action \\( a_t \\).\n",
-    "- \\( \\alpha \\): Learning rate, which determines how much new information overrides the old information.\n",
-    "- \\( R_t \\): Reward received after taking action \\( a_t \\) in state \\( s_t \\).\n",
-    "- \\( \\gamma \\): Discount factor, which determines the importance of future rewards.\n",
-    "- \\( \\max_{a} Q(s_{t+1}, a) \\): Maximum Q-value for the next state \\( s_{t+1} \\) over all possible actions.\n",
+    "- $ Q(s_t, a_t) $: Current Q-value for state $ s_t $ and action $ a_t $.\n",
+    "- $ \\alpha $: Learning rate, which determines how much new information overrides the old information.\n",
+    "- $ R_t $: Reward received after taking action $ a_t $ in state $ s_t $.\n",
+    "- $ \\gamma $: Discount factor, which determines the importance of future rewards.\n",
+    "- $ \\max_{a} Q(s_{t+1}, a) $: Maximum Q-value for the next state $ s_{t+1} $ over all possible actions.\n",
     "\n",
-    "The goal of Q-Learning is to iteratively update the Q-values until they converge to the optimal Q-values, which can then be used to derive the optimal policy.\n",
-    "\"\"\""
+    "The goal of Q-Learning is to iteratively update the Q-values until they converge to the optimal Q-values, which can then be used to derive the optimal policy.\n"
    ]
   },
   {
@@ -83,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
